test/Fail/Issue7751b.err
Issue7751b.agda:6.1-8.9: error: [TerminationIssue]
Termination checking failed for the following functions:
  Bad
Problematic calls:
  Bad
    (at Issue7751b.agda:7.8-11)
